--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -2,8 +2,8 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WordPress Guy | Terms & Conditions</title>
-    <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <title>WordPress Guy | Terms &amp; Conditions</title>
+    <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="keywords" content="wordpress maintenance, wordpress, backup, wordpress backup, wordpress theme update, wordpress plugin update, wordpress core_update, development, wordpress development">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex, nofollow">
@@ -33,8 +33,8 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WordPress Guy | Terms & Conditions">
-    <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <meta name="twitter:title" content="WordPress Guy | Terms &amp; Conditions">
+    <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="twitter:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
     <meta name="twitter:site" content="@WordPressGuy">
@@ -43,8 +43,8 @@
     <!-- Open Graph data -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="WordPress Guy">
-    <meta property="og:title" content="WordPress Guy | Terms & Conditions">
-    <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <meta property="og:title" content="WordPress Guy | Terms &amp; Conditions">
+    <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta property="og:url" content="https://wordpressguy.co.za/terms_and_conditions.html">
     <meta property="og:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta property="og:image:width" content="503">
@@ -321,7 +321,7 @@
 
                         <p>These terms and conditions constitute the entire agreement and understanding between us concerning the subject matter of this agreement and supersedes all prior agreements and understandings of the parties with respect to that subject matter. These Terms of Use may not be altered, supplemented, or amended by the use of any other document(s). Any attempt to alter, supplement or amend this document or to enter an order for products or services which are subject to additional or altered terms and conditions shall be null and void, unless otherwise agreed to in a written agreement signed by you and us. To the extent that anything in or associated with this site is in conflict or inconsistent with these Terms of Use, these Terms of Use shall take precedence.</p>
 
-                        <h3>Support Requests & Development Time</h3>
+                        <h3>Support Requests &amp; Development Time</h3>
 
                         <p>Support must be requested through our helpdesk on info@wordpressguy.co.za so that it can be categorized and responded to in a timely manner. You will be notified via email with information about our helpdesk upon registration. Support requests are subject to approval.</p>
 
@@ -410,11 +410,10 @@
                                     <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="/images/worddpress_guy_long_logo.png" alt="WordPress Guy" style="width: 100%; max-width: 500px;"></div>
                                     <p>WordPress Guy is dedicated to helping websites who need assistance with maintenance and optimisation. We provide a high quality, transparent and professional service.</p>
 
-                                    <ul class="list-inline mb-20">
-                                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa</li>
-                                        <li class="list-inline-item"><a href="tel: 0027823057490" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>+27 82 305 7490</a></li>
-                                        <li class="list-inline-item"><a href="mailto: administrator@wordpressguy.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>administrator@wordpressguy.co.za</a></li>
-                                    </ul>
+                                    <p>
+                                        <i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa<br>
+                                        <a href="mailto: administrator@wordpressguy.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>administrator@wordpressguy.co.za</a>
+                                    </p>
                                     <!--
                                     <ul class="social-links circle animated-effect-1 margin-clear">
                                         <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -427,7 +426,7 @@
                                     <div class="separator"></div>
                                     <p>This website uses cookies and by continuing to browse our website you acknowledge and agree to the terms and conditions thereof. See links below for further information.</p>
                                     <p><a href="/terms_and_conditions.html">Terms &amp; Conditions</a> | <a href="/privacy_policy.html">Privacy Policy</a> | <a href="/cookie_policy.html">Cookie Policy</a></p>
-                                    <p class="text-center margin-clear">&copy; WordPress Guy. All Rights Reserved</p>
+                                    <p class="text-center margin-clear">&amp;copy; WordPress Guy. All Rights Reserved</p>
                                 </div>
                             </div>
                         </div>
