--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -375,31 +375,103 @@
                     </div>
                 </div>
             </div>
-        </section><!-- /privacy_policy -->
-        <div class="dark-translucent-bg footer-top animated-text default-hovered" style="">
+            <div id="contact_us"></div>
+        </section><!-- /terms_and_conditions -->
+        <section class="pv-40">
+            <div class="container">
+                <div class="row justify-content-lg-center">
+                    <div class="col-lg-10">
+                        <h1 class="text-center mt-4 large">Contact <strong>Us</strong> <span class="text-default">Today</span></h1>
+                        <div class="separator"></div>
+                        <p class="large text-center">
+                            Ready to get started? Have a question? Use the form below and we will contact you.
+                        </p>
+                        <form id="contact-form" method="post">
+                            <div id="messageSuccess" class="alert alert-success alert-dismissible fade show">
+                                <p><strong>Thank you!</strong></p>
+                                <p>Your message has been sent. We will respond as soon as possible.</p>
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="row">
+                                <div class="col form-group input-group-sm">
+                                    <label for="name">Name</label>
+                                    <input id="name" class="form-control" type="text" style="height:35px;" placeholder="Enter name here…">
+                                    <div class="valid-feedback pl-2">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback pl-2">
+                                        Valid name required. Only letters, spaces, hyphens and apostrophes allowed.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 form-group input-group-sm">
+                                    <label for="email">Email</label>
+                                    <input id="email" class="form-control" type="email" placeholder="Enter email here…">
+                                    <div class="valid-feedback pl-2">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback pl-2">
+                                        Valid email address required. eg. <i>name@example.com</i>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 form-group input-group-sm">
+                                    <label for="number">Contact Number</label>
+                                    <input id="number" class="form-control" type="tel" placeholder="Enter contact number here…">
+                                    <div class="valid-feedback pl-2">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback pl-2">
+                                        10 digit contact numbers only. eg. <i>0829876543</i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col form-group input-group-sm">
+                                    <label for="message">How can we help you?</label>
+                                    <textarea id="message" class="form-control" rows="5" placeholder="Enter message here…"></textarea>
+                                    <div class="valid-feedback pl-2">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback pl-2">
+                                        Message required.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 form-group input-group-sm">
+                                    <label for="security">Security Question</label>
+                                    <input id="security" class="form-control" type="text" placeholder="25 + 125 = ?">
+                                    <div class="valid-feedback pl-2">
+                                        Looks good!
+                                    </div>
+                                    <div class="invalid-feedback pl-2">
+                                        Please enter the correct answer.
+                                    </div>
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    <button class="btn btn-animated btn-lg btn-default-transparent" type="button" onClick="submitToAPI(event)">Submit <i class="fa fa-envelope-o pl-20"></i></button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section><!-- /contact us form -->
+        <div class="default-bg footer-top">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="call-to-action text-center">
+                        <div class="text-center">
                             <div class="row">
-                                <div class="col-md-4">
-                                    <p class="mt-3"><a href="tel: 0027823057490" class="btn btn-animated btn-lg btn-gray-transparent">Telephone <i class="fa fa-phone pl-20"></i></a></p>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <h2 class="mt-4">Talk to Us.</h2>
-                                    <h2 class="mt-4">We're Ready To Help You.</h2>
-                                </div>
-                                <div class="col-md-4">
-                                    <p class="mt-3"><a href="mailto:administrator@wordpressguy.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div><!-- /ribbon -->
-
+        </div><!-- /red ribbon -->
         <footer id="footer" class="clearfix">
             <div class="footer">
                 <div class="container">
@@ -440,14 +512,115 @@
     <script src="/js/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="/js/extensions/revolution.extension.carousel.min.js"></script>
     <script type="text/javascript" src="/js/extensions/revolution.extension.navigation.min.js"></script>
-    <script>
+    <script type="text/javascript">
+        $("#messageSuccess").hide();
+        $("#name, #email, #message").css("border-color", "");
+        // Function to defer images on load and then load them once the rest of the page is loaded.
         function init() {
-            var imgDefer = document.getElementsByTagName('img');
-            for (var i=0; i<imgDefer.length; i++) {
-                if(imgDefer[i].getAttribute('data-src')) {
-                    imgDefer[i].setAttribute('src',imgDefer[i].getAttribute('data-src'));
-                } } }
-                window.onload = init;
+            let imgDefer = document.getElementsByTagName('img');
+            for (let i = 0; i < imgDefer.length; i++) {
+                if (imgDefer[i].getAttribute('data-src')) {
+                    imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
+                }
+            }
+        }
+        window.onload = init;
+
+        // Function to validate email address through regular expression
+        function validateEmail(sEmail) {
+            let filter = /^[\w-.+]+@[a-zA-Z0-9.-]+.[a-zA-z0-9]{2,4}$/;
+            if (filter.test(sEmail)) {
+                return true;
+            } else {
+                return false;
+            };
+        };
+        // Form validation
+        function submitToAPI(e) {
+            e.preventDefault();
+
+            let lettersRegex = /([A-Za-z])/g;
+            let startsWidthRegex = /\b0/;
+            let cellphoneRegex = /0((60[3-9]|64[0-5])\d{6}|(7[1-4689]|6[1-3]|8[1-4])\d{7})/;
+
+            let validName = false;
+            let validEmail = false;
+            let validNumber = false;
+            let validMessage = false;
+            let validSecurity = false;
+
+
+            if ($("#name").val().match("^[a-zA-Z' .,\s-]{0,150}$") && $("#name").val() !== "") {
+                $("#name").removeClass("is-invalid").addClass("is-valid");
+                validName = true;
+            } else {
+                $("#name").removeClass("is-valid").addClass("is-invalid");
+            }
+            sEmail = $("#email").val();
+            if (validateEmail(sEmail)) {
+                $("#email").removeClass("is-invalid").addClass("is-valid");
+                validEmail = true;
+            } else {
+                $("#email").removeClass("is-valid").addClass("is-invalid");
+            }
+            if ($("#number").val().match(lettersRegex)) {
+                $("#number").removeClass("is-valid").addClass("is-invalid");
+            }else if ($("#number").val().match(cellphoneRegex) && $("#number").val().match(startsWidthRegex) && $("#number").val().length < 11) {
+                $("#number").removeClass("is-invalid").addClass("is-valid");
+                validNumber = true;
+            }else{
+                $("#number").removeClass("is-valid").addClass("is-invalid");
+            }
+            if ($("#message").val() === "") {
+                $("#message").removeClass("is-valid").addClass("is-invalid");
+            } else {
+                $("#message").removeClass("is-invalid").addClass("is-valid");
+                validMessage = true;
+            }
+            if ($("#security").val() != "150") {
+                $("#security").removeClass("is-valid").addClass("is-invalid");
+            } else {
+                $("#security").removeClass("is-invalid").addClass("is-valid");
+                validSecurity = true;
+            }
+
+            if (validName !== true || validEmail !== true || validMessage !== true || validNumber !== true || validSecurity !== true) {
+                // check for errors - if found block submit
+                return;
+            } else {
+                // all good - allow submit
+                let name = $("#name").val();
+                let email = $("#email").val();
+                let number = $("#number").val();
+                let desc = $("#message").val();
+                let data = {
+                    "name": name,
+                    "email": email,
+                    "number": number,
+                    "desc": desc
+                };
+                $.ajax({
+                    type: "POST",
+                    url: "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us",
+                    dataType: "json",
+                    crossDomain: "true",
+                    contentType: "application/json; charset=utf-8",
+                    data: JSON.stringify(data),
+
+                    success: function () {
+                        // clear form and show a success message
+                        $("#messageSuccess").show();
+                        $("#name, #email, #number, #message, #security").removeClass("is-valid");
+                        $("#name, #email, #number, #message, #security").css("border-color", "#e1e1e1")
+                        document.getElementById("contact-form").reset();
+                    },
+                    error: function () {
+                        alert("An error occurred. Please try again later.");
+                    }
+                });
+                return true;
+            }
+        }
     </script>
 </body>
 </html>
