--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WordPress Guy | Privacy Policy</title>
+    <title>Privacy Policy | WordPress Maintenance Specialists</title>
     <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="keywords" content="wordpress maintenance, wordpress, backup, wordpress backup, wordpress theme update, wordpress plugin update, wordpress core_update, development, wordpress development">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
