--- a/contact_us.html
+++ b/contact_us.html
@@ -2,8 +2,8 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WordPress Guy | WordPress Maintenance Specialists</title>
-    <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
+    <title>Contact Us | WordPress Maintenance Specialist</title>
+    <meta name="description" content="Contact WordPress Guy - WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="keywords" content="wordpress maintenance, wordpress, backup, wordpress backup, wordpress theme update, wordpress plugin update, wordpress core_update, development, wordpress development">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
@@ -33,8 +33,8 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WordPress Guy | Maintenance Specialists">
-    <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
+    <meta name="twitter:title" content="Contact Us | Maintenance Specialists">
+    <meta name="twitter:description" content="Contact WordPress Guy - WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="twitter:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
     <meta name="twitter:site" content="@WordPressGuy">
