--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WordPress Guy | Cookie Policy</title>
+    <title>Cookie Policy | WordPress Maintenance Specialists</title>
     <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta name="keywords" content="wordpress maintenance, wordpress, backup, wordpress backup, wordpress theme update, wordpress plugin update, wordpress core_update, development, wordpress development">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,7 +35,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="WordPress Guy | Cookie Policy">
     <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
-    <meta name="twitter:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta name="twitter:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
     <meta name="twitter:site" content="@WordPressGuy">
     <meta name="twitter:creator" content="@WordpessGuy">
@@ -46,7 +46,7 @@
     <meta property="og:title" content="WordPress Guy | Cookie Policy">
     <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta property="og:url" content="https://wordpressguy.co.za/cookie_policy.html">
-    <meta property="og:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta property="og:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta property="og:image:width" content="503">
     <meta property="og:image:height" content="90">
 
