--- a/index_test.html
+++ b/index_test.html
@@ -35,7 +35,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="WordPress Guy | Maintenance Specialists">
     <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
-    <meta name="twitter:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta name="twitter:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
     <meta name="twitter:site" content="@WordPressGuy">
     <meta name="twitter:creator" content="@WordpessGuy">
@@ -46,7 +46,7 @@
     <meta property="og:title" content="WordPress Guy | Maintenance Specialists">
     <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
     <meta property="og:url" content="https://wordpressguy.co.za/">
-    <meta property="og:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta property="og:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta property="og:image:width" content="503">
     <meta property="og:image:height" content="90">
 
