contact email update
changed 'info' to 'adminstrator'

--- a/contact_us.html
+++ b/contact_us.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
     <meta name="author" content="WordPress Guy">
-    <link rel="canonical" href="https://wordpressguy.co.za/">
+    <link rel="canonical" href="https://wordpressguy.co.za/contact_us.html">
     <meta name="theme-color" content="#000000">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
@@ -44,8 +44,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="WordPress Guy">
     <meta property="og:title" content="WordPress Guy | Maintenance Specialists">
-    <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
-    <meta property="og:url" content="https://wordpressguy.co.za/">
+    <meta property="og:description" content="Contact WordPress Guy - WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme &amp; plugin updates and custom WordPress development.">
+    <meta property="og:url" content="https://wordpressguy.co.za/contact_us.html">
     <meta property="og:image" content="https://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta property="og:image:width" content="503">
     <meta property="og:image:height" content="90">
