--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -315,7 +315,7 @@
 
                         <h3>Notices</h3>
 
-                        <p>All notices to a party shall be in writing and shall be made either via email or conventional mail. Notices to us must be sent to the attention of Customer Service at info@wordpressguy.co.za, if by email, or at WordPress Guy, 23 Waterville Street, Milnerton, Cape Town, 7441, Cape Town. if by conventional mail. Notices to you may be sent to the address supplied by you as part of your Registration Data. In addition, we may broadcast notices or messages through the site to inform you of changes to the site or other matters of importance, and such broadcasts shall constitute notice to you at the time of sending.</p>
+                        <p>All notices to a party shall be in writing and shall be made either via email or conventional mail. Notices to us must be sent to the attention of Customer Service at administrator@wordpressguy.co.za, if by email, or at WordPress Guy, 23 Waterville Street, Milnerton, Cape Town, 7441, Cape Town. if by conventional mail. Notices to you may be sent to the address supplied by you as part of your Registration Data. In addition, we may broadcast notices or messages through the site to inform you of changes to the site or other matters of importance, and such broadcasts shall constitute notice to you at the time of sending.</p>
 
                         <h3>Entire Agreement</h3>
 
@@ -323,7 +323,7 @@
 
                         <h3>Support Requests &amp; Development Time</h3>
 
-                        <p>Support must be requested through our helpdesk on info@wordpressguy.co.za so that it can be categorized and responded to in a timely manner. You will be notified via email with information about our helpdesk upon registration. Support requests are subject to approval.</p>
+                        <p>Support must be requested through our helpdesk on administrator@wordpressguy.co.za so that it can be categorized and responded to in a timely manner. You will be notified via email with information about our helpdesk upon registration. Support requests are subject to approval.</p>
 
                         <p>Acceptable support requests would include the following:</p>
 
@@ -341,7 +341,7 @@
                             <li>SEO setup/troubleshooting</li>
                         </ul>
 
-                        <p>If you have questions regarding the nature of your support request please contact us at info@wordpressguy.co.za for clarification.</p>
+                        <p>If you have questions regarding the nature of your support request please contact us at administrator@wordpressguy.co.za for clarification.</p>
 
                         <p>Development time can be used as phone support, chat support or actual development hours but all of the above are subtracted from any additional time purchased. Development time requested will be billed at our hourly rate of $150/hr. While we will do our best to keep the same developer assigned to individual projects we cannot guarantee this at any time.</p>
 
