--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -186,7 +186,7 @@
 
                         <p>However, if you are still looking for more information then you can contact us through one of our preferred contact methods:</p>
 
-                        <p><strong>Email: </strong>info@ewordpressguy.co.za</p>
+                        <p><strong>Email: </strong>administrator@wordpressguy.co.za</p>
                     </div>
                 </div>
             </div>
