--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -313,7 +313,7 @@
                                     <div class="separator"></div>
                                     <p>This website uses cookies and by continuing to browse our website you acknowledge and agree to the terms and conditions thereof. See links below for further information.</p>
                                     <p><a href="/terms_and_conditions.html">Terms &amp; Conditions</a> | <a href="/privacy_policy.html">Privacy Policy</a> | <a href="/cookie_policy.html">Cookie Policy</a></p>
-                                    <p class="text-center margin-clear">&amp;copy; WordPress Guy. All Rights Reserved</p>
+                                    <p class="text-center margin-clear">&copy; WordPress Guy. All Rights Reserved</p>
                                 </div>
                             </div>
                         </div>
